# PIDAJ

./: README.md
calculation-api/: pyproject.toml
calculation-api/calculation/: db.sqlite3
calculation-api/calculation/calculation/: asgi.py  settings.py  urls.py  wsgi.py
calculation-api/calculation/matrix_calculation/: apps.py  urls.py  views.py
calculation-api/calculation/matrix_calculation/scripts/: generator.py  list_comprehension.py  multiprocessing_pool.py  sequential.py
v1/: z1.py  z11.py  z2.py
web-api/: pyproject.toml  webapi
web-api/pidajAPI/: db.sqlite3  manage.py
web-api/pidajAPI/pidajAPI/: asgi.py  settings.py  urls.py  wsgi.py
web-api/pidajAPI/student/: admin.py  models.py  serializers.py  urls.py  views.py
web-api/pidajAPI/student/migrations/: 0001_initial.py
